# bayanlab

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  deploy-ngrok.sh  generate-qr.sh  migrate-neon.sh  pyproject.toml  render.yaml  requirements.txt  run_pipeline.py  test_qa.sh
.backup/docs/: CLAIM_PORTAL_GUIDE.md  PROWASL_INTEGRATION.md  QA_CHECKLIST.md  QUICKSTART.md  RENDER_NEON_DEPLOY.md
backend/configs/: dq_rules.yaml  regions.yaml  sources.yaml
backend/services/: pipeline_runner.py
backend/sql/: 000_init.sql  010_staging.sql  020_canonical.sql  030_views.sql  (+14 more)
docs/: DECISIONS.md  LOCAL_DEVELOPMENT.md  MASJID_ONBOARDING.md  README.md  ROADMAP.md  SECURITY.md  TROUBLESHOOTING.md  google-calendar.md  onboarding_masjids.md  setup.md  validation_tool.md
scripts/: README.md  backup_database.sh  check_approvals.py  crontab.example  debug_custom_search.py  deep_scrape_websites.py  enrich_google_places.py  enrich_google_places_new.py  enrich_halal_eateries.py  enrich_halal_markets.py  enrich_masajid.py  enrich_via_google.py  export_for_prowasl.py  filter_business_owners.py  geocode_approved_claims.py  geocode_hybrid.py  geocode_staging.py  geocode_with_osm.py  ingest_masajid.py  load_halal_eateries.py  logrotate.conf  migrate_food.py  migrate_masajid.py  restore_database.sh  review_claims.py  run_migration.py  run_pipeline_cron.sh  send_retroactive_emails_neon.py  simple_scrape_websites.py  sync_prod_to_local.py  test_linkedin_scrape.py  unified_ingest.py  verify_and_enrich.py
seed/: businesses.csv  events.csv
(+36 files in other folders)
