[project]
name = "bayanlab"
version = "0.1.0"
description = "BAYĀN Labs - Colorado Community Data Backbone"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.25",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "geoalchemy2>=0.14.3",
    "pydantic[email]>=2.5.3",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0.1",
    "httpx>=0.26.0",
    "icalendar>=5.0.11",
    "apscheduler>=3.10.4",
    "python-dotenv>=1.0.0",
    "shapely>=2.0.2",
    "geopy>=2.4.1",
    "python-dateutil>=2.8.2",
    "pytz>=2023.3",
    "slowapi>=0.1.9",
    "google-auth>=2.27.0",
    "google-auth-oauthlib>=1.2.0",
    "google-api-python-client>=2.116.0",
    "greenlet>=3.2.4",
    "beautifulsoup4>=4.14.2",
    "requests>=2.32.5",
    "googlemaps>=4.10.0",
    "crawl4ai>=0.7.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "black>=23.12.1",
    "ruff>=0.1.11",
]
